[package]
name = "xdsum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
sha2 = "0.10.6"
md5 = "0.7.0"
whirlpool = "0.10.4"
tiger = "0.2.1"
streebog = "0.10.2"
sm3 = "0.4.2"
ascon-hash = "0.2.0"
belt-hash = "0.1.0"
gost94 = "0.10.4"
groestl = "0.10.1"
md2 = "0.10.2"
md4 = "0.10.2"
sha1 = "0.10.5"
shabal = "0.4.1"
blake2 = "0.10.6"
fsb = "0.1.3"
jh = "0.1.0"
ripemd = "0.1.3"
sha3 = "0.10.8"
